<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search_teachers"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search_teachers" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_menu_requests"
            android:title="@string/menu_requests" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_teacher"
                android:icon="@drawable/ic_menu_person"
                android:title="@string/menu_teacher" />
            <item
                android:id="@+id/nav_students"
                android:icon="@drawable/ic_menu_person"
                android:title="@string/menu_students" />
        </menu>
    </item>

</menu>
