<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.caredriving.ui.navigationBar.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search_teachers"
        android:name="com.example.caredriving.ui.navigationBar.searchTeachers.SearchTeachersFragment"
        android:label="@string/menu_search_teachers"
        tools:layout="@layout/fragment_search_teachers" />

    <fragment
        android:id="@+id/nav_requests"
        android:name="com.example.caredriving.ui.navigationBar.requests.RequestsFragment"
        android:label="@string/menu_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.caredriving.ui.navigationBar.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_teacher"
        android:name="com.example.caredriving.ui.navigationBar.teacher.ShareFragment"
        android:label="@string/menu_teacher"
        tools:layout="@layout/fragment_teacher" />

    <fragment
        android:id="@+id/nav_students"
        android:name="com.example.caredriving.ui.navigationBar.students.SendFragment"
        android:label="@string/menu_students"
        tools:layout="@layout/fragment_students" />
</navigation>